[gd_scene load_steps=13 format=3 uid="uid://hh0mump0swlx"]

[ext_resource type="Script" path="res://addons/zylann.3d_basics/character/character.gd" id="1"]
[ext_resource type="Script" path="res://character/mouse_look.gd" id="2"]
[ext_resource type="Script" path="res://camera/camera_hints.gd" id="3"]
[ext_resource type="Script" path="res://character/character_controller.gd" id="4"]
[ext_resource type="Script" path="res://character/character_audio.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://u3v6wu6o27ys" path="res://sounds/place_waypoint.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://byjc2j67p68vt" path="res://sounds/flash_on.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://cvilca41rqwpc" path="res://sounds/flash_off.wav" id="8"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.4
height = 1.8

[sub_resource type="BoxMesh" id="2"]
size = Vector3(0.7, 1.2, 0.7)

[sub_resource type="BoxMesh" id="3"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="4"]
size = Vector3(8, 0.5, 0.5)

[node name="Character" type="CharacterBody3D"]
script = ExtResource( "1" )

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875292, 0)
shape = SubResource( "1" )

[node name="Controller" type="Node" parent="."]
script = ExtResource( "4" )

[node name="MouseLook" type="Node" parent="."]
script = ExtResource( "2" )

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(0.999725, 0.0234551, 0, -0.0234551, 0.999725, 0, 0, 0, 1, 0, 1.5976, 0)

[node name="CameraHints" type="Node" parent="Head"]
script = ExtResource( "3" )
distance_to_target = 2.0
height_modifier = 0.0
target_height_modifier = 0.2
side_offset = 1.0

[node name="Visual" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.876689, 0)

[node name="FlashLight" type="SpotLight3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.34576, -0.396333)
light_energy = 2.0
spot_range = 60.0
spot_attenuation = 1.93187
spot_angle_attenuation = 0.732043
visible = false

[node name="Body" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.272492, 0)
mesh = SubResource( "2" )
surface_material_override/0 = null

[node name="Head" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.676365, 0)
mesh = SubResource( "3" )
surface_material_override/0 = null

[node name="Arms" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(0.237608, 0, 0, 0, 0.237608, 0, 0, 0, 0.237608, 0, 0.226605, 0.0591713)
mesh = SubResource( "4" )
surface_material_override/0 = null

[node name="Audio" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.86435, -0.796673, 0)
script = ExtResource( "5" )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
volume_db = -4.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio"]
volume_db = -4.0

[node name="Digs" type="Node" parent="Audio"]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer3D" parent="Audio/Digs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.86435, -0.796673, 0)
unit_size = 5.0

[node name="AudioStreamPlayer4" type="AudioStreamPlayer3D" parent="Audio/Digs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.86435, -0.796673, 0)
unit_size = 5.0

[node name="AudioStreamPlayer5" type="AudioStreamPlayer3D" parent="Audio/Digs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.86435, -0.796673, 0)
unit_size = 5.0

[node name="Waypoint" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( "6" )

[node name="FlashLightOn" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( "7" )

[node name="FlashLightOff" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( "8" )

[connection signal="jumped" from="." to="Audio" method="_on_Character_jumped"]
